Added notes to HTML, CSS, Git, and Javascript; header and footer are now red

--- a/index.html
+++ b/index.html
@@ -17,14 +17,24 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>The head element contains information about the webpage.</li>
-          <li>The body element represents the visible content shown to the user.</li>
+          <li>Use HTML to build the structure of your "house".</li>
+          <li>The &lt;head&gt; element contains information about the webpage.</li>
+          <li>Head includes &lt;title&gt; and link to external css style sheet.</li>
+          <li>The &lt;body&gt; element represents the visible content shown to the user.</li>
+          <li>Headers: &lt;h1&gt; through &lt;h6&gt; </li>
+          <li>Sections: &lt;section&gt; through &lt;/section&gt;</li>
+          <li style= "margin-left: 20px">class=" " and id=" " for external css</li>
+          <li>Lists: &lt;ul&gt; or &lt;ol&gt;; &lt;li&gt;</li>
         </ul>
       </section>
-   
+
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
+          <li>Use CSS to style your "house".</li>
+          <li style="color:blue; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">Inline CSS: Unique style for a single element within HTML. </li>
+          <li>Internal CSS: Define all &lt;style&gt; elements within HTML.</li>
+          <li>External Style css sheet (.css): Define all &lt;style&gt; elements on a separate file.</li>
           <li>A margin indicates how much space we want around the outside of an element.</li>
           <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
@@ -33,16 +43,26 @@
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
+          <li>Use Git to control changes in a systematic way</li>
+          <li>touch " ": creates new folder</li>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>Git Flow!: <mark>git add -A, git commit -m " "</mark>... stages changes, commits locally</li>
+          <li style= "margin-left: 20px">...<mark>git pull origin main, git push origin &lt;insert branch name&gt;</mark>... makes sure local branch is up to date, pushes changes to remote repository</li>
+          <li style= "margin-left: 20px"> GitHub--&gt;Create pull request--&gt;Peer Review--&gt;Merge</li>
         </ul>
       </section>
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
+          <li>Use JavaScript to add functionality to your "house".</li>
           <li>A variable is a named container that allows us to store data in our code.</li>
           <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Use loops to perform a task for multiple values of a variable.</li>
+          <li>for(var x = 0; x &lt; shapes.length; x++) {<br/>console.log(shapes[x]);<br/>}</li>
+          <li>Use functions to define a task, then call functions to perform tasks.</li>
+          <li>function functionname() {<br>if (variable === variable[0]) {<br>console.log("response");<br>} else if (condition === variable[1]) {<br>console.log("response")<br>}...</li>
         </ul>
       </section>
     </main>
