changed 'condition' to 'variable' in JS section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li>Use loops to perform a task for multiple values of a variable.</li>
           <li>for(var x = 0; x &lt; shapes.length; x++) {<br/>console.log(shapes[x]);<br/>}</li>
           <li>Use functions to define a task, then call functions to perform tasks.</li>
-          <li>function functionname() {<br>if (variable === variable[0]) {<br>console.log("response");<br>} else if (condition === variable[1]) {<br>console.log("response")<br>}...</li>
+          <li>function functionname() {<br>if (variable === variable[0]) {<br>console.log("response");<br>} else if (variable === variable[1]) {<br>console.log("response")<br>}...</li>
         </ul>
       </section>
     </main>
